--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,87 @@
 		"limits": "cpp",
 		"semaphore": "cpp",
 		"valarray": "cpp",
-		"chrono": "cpp"
+		"chrono": "cpp",
+		"__bit_reference": "cpp",
+		"__hash_table": "cpp",
+		"__locale": "cpp",
+		"__node_handle": "cpp",
+		"__split_buffer": "cpp",
+		"__tree": "cpp",
+		"__verbose_abort": "cpp",
+		"any": "cpp",
+		"array": "cpp",
+		"bitset": "cpp",
+		"cctype": "cpp",
+		"cfenv": "cpp",
+		"charconv": "cpp",
+		"cinttypes": "cpp",
+		"clocale": "cpp",
+		"codecvt": "cpp",
+		"complex": "cpp",
+		"condition_variable": "cpp",
+		"csetjmp": "cpp",
+		"csignal": "cpp",
+		"cstdarg": "cpp",
+		"cstdint": "cpp",
+		"cstdio": "cpp",
+		"cstdlib": "cpp",
+		"cstring": "cpp",
+		"ctime": "cpp",
+		"cuchar": "cpp",
+		"cwchar": "cpp",
+		"cwctype": "cpp",
+		"deque": "cpp",
+		"execution": "cpp",
+		"memory": "cpp",
+		"forward_list": "cpp",
+		"fstream": "cpp",
+		"future": "cpp",
+		"initializer_list": "cpp",
+		"ios": "cpp",
+		"iosfwd": "cpp",
+		"istream": "cpp",
+		"list": "cpp",
+		"locale": "cpp",
+		"map": "cpp",
+		"mutex": "cpp",
+		"new": "cpp",
+		"numbers": "cpp",
+		"optional": "cpp",
+		"print": "cpp",
+		"queue": "cpp",
+		"regex": "cpp",
+		"scoped_allocator": "cpp",
+		"set": "cpp",
+		"shared_mutex": "cpp",
+		"source_location": "cpp",
+		"span": "cpp",
+		"sstream": "cpp",
+		"stack": "cpp",
+		"stdexcept": "cpp",
+		"streambuf": "cpp",
+		"string": "cpp",
+		"string_view": "cpp",
+		"syncstream": "cpp",
+		"typeindex": "cpp",
+		"typeinfo": "cpp",
+		"unordered_map": "cpp",
+		"unordered_set": "cpp",
+		"variant": "cpp",
+		"vector": "cpp",
+		"atomic": "cpp",
+		"bit": "cpp",
+		"compare": "cpp",
+		"concepts": "cpp",
+		"coroutine": "cpp",
+		"cstddef": "cpp",
+		"expected": "cpp",
+		"algorithm": "cpp",
+		"functional": "cpp",
+		"iterator": "cpp",
+		"numeric": "cpp",
+		"type_traits": "cpp",
+		"utility": "cpp",
+		"ranges": "cpp"
 	}
 }
